syntax = "proto3";

package runtime.api.config.security.authn.apikey.v1;

option go_package = "github.com/origadmin/runtime/api/gen/go/config/security/authn/apikey/v1;apikeyv1";

// KeyCredential holds the credential for any single-key-based authentication.
message KeyCredential {
  string key = 1;
}
