syntax = "proto3";

package runtime.api.config.security.authn.oidc.v1;

option go_package = "github.com/origadmin/runtime/api/gen/go/config/security/authn/oidc/v1;oidcv1";

// OidcCredential holds the primary credential for OIDC authentication.
message OidcCredential {
  string id_token = 1;
}
